# auto_labelling_pipeline

./: .clang-tidy  .gitignore  CMakeLists.txt
.cache/clangd/index/: Pipeline.hpp.11A0AB614EAF8E0F.idx  Pipeline.hpp.3766384DA566E6B7.idx  Pipeline.hpp.D345C09CAD74644B.idx  main.cpp.8795971254C1126F.idx  main.cpp.BA55501353082488.idx  main.cpp.CC5A5A43018415AA.idx  main.cpp.E9377CB9CBA62415.idx  pipeline.cpp.0B2779A75924DB00.idx  pipeline.cpp.3F4C6B8D89BF2BCD.idx  pipeline.cpp.F86AF3ED614BF9B8.idx  test.cpp.7E2930E8A798831A.idx  test.cpp.854F46C5D6AB6AF2.idx  test.cpp.895C75C715A546FD.idx  test.cpp.D47277A8CB3242E0.idx
includes/: Pipeline.hpp
processed/: road_yellow_lane.json
sources/: Pipeline.cpp  main.cpp
test/: CMakeLists.txt  CMakeLists.txt.bak  test.cpp
